# LBM-CaImAn-Python

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  README.rst  __init__.py  __main__.py  benchmark.py  demo_params.json  demo_pipeline.py  demo_registration.py  env_full.yml  env_test.yml  environment.yml  environment_dev.yml  environment_full.yml  first_steps.html  genindex.html  glossary.html  index.html  main.py  meta.yaml  objects.inv  params.py  pixi.toml  py-modindex.html  pyproject.toml  requirements.txt  run.py  runner.py  scratch.py  search.html  searchindex.js  setup.py  snippets.html  tippy_wiki_cache.json  util.py  (+1 more)
.conda/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  ca-certificates-2024.3.11-h06a4308_0.json  history  ld_impl_linux-64-2.38-h1181459_1.json  libffi-3.4.4-h6a678d5_1.json  libgcc-ng-11.2.0-h1234567_1.json  libgomp-11.2.0-h1234567_1.json  libstdcxx-ng-11.2.0-h1234567_1.json  ncurses-6.4-h6a678d5_0.json  openssl-3.0.13-h7f8727e_1.json  pip-24.0-py39h06a4308_0.json  python-3.9.19-h955ad1f_1.json  readline-8.2-h5eee18b_0.json  setuptools-69.5.1-py39h06a4308_0.json  sqlite-3.45.3-h5eee18b_0.json  tk-8.6.14-h39e8969_0.json  tzdata-2024a-h04d1e81_0.json  wheel-0.43.0-py39h06a4308_0.json  xz-5.4.6-h5eee18b_1.json  zlib-1.2.13-h5eee18b_1.json
.conda/etc/: aau_token
.github/workflows/: build_and_deploy_docs.yml  install-linux-miniforge.yml  install-venv.yml  install-windows-miniforge.yml
.virtual_documents/notebooks/: benchmark.ipynb  sandbox.ipynb
Utils/: reshaping_stitching_aligning.py  reshaping_stitching_aligning_edits.py  tifs_to_mosaic_mp4.py
_modules/: index.html
_modules/lbm_caiman_python/: _store_model.html  assembly.html  batch.html  collation.html  default_ops.html  helpers.html  lcp_io.html  postprocessing.html  run_lcp.html  summary.html
_modules/scanreader/: core.html
_sources/: first_steps.md  glossary.md  index.md
_sources/api/: index.md
_sources/examples/: collation.ipynb
_sources/user_guide/: assembly.md  batch_utilities.md  registration.md
_static/: documentation_options.js
_static/tippy/: first_steps.1d6aa202-3ad8-4c6a-8f09-3d5502e7f7f8.js  first_steps.d6a08d01-f979-42f3-8c63-35ba0aaffd0c.js  (+39 more)
api/: index.html
core/: __init__.py  mov.py
data/: demo_data.tif
docs/: Makefile  benchmark_chunks.ipynb  benchmark_stripping.ipynb  conf.py  data_guide.rst  demo_pipeline.ipynb  index.md  index.rst  parameters.rst  requirements.txt  snippets.md  user_guide.md
examples/: assembly.html  collation.html  fastplotlib.html  index.html  motion_correction.html  preprocessing.html  segmentation.html
exclude/: reshaping_stitching_aligning.py  santi_reshape.py  scan.py  scratch.py
lbm_caiman_python/: __init__.py  __main__.py  _version.py  assembly.py  batch.py  collation.py  default_ops.py  helpers.py  lbm_io.py  lcp_io.py  main.py  postprocessing.py  run_lcp.py  run_slurm.py  setup_caiman.py  stdout.py  summary.py  transfer.py  visualize.py
lbm_util/: __init__.py  params.py  reshaping_stitching_aligning.py  scan_correction.py  tifs_to_mosaic_mp4.py
meso_mc/: __init__.py
notebooks/: LBM_Sample_Pipeline.ipynb  Untitled.ipynb  benchmark.ipynb  comparison.html  demo_pipeline.ipynb  examine_si_tiff.ipynb  napari.ipynb  restructure_planes.ipynb  sandbox.ipynb  untitled.py
scripts/: debug_caiman.py  debug_fpl.py  run_planar_registration.py  run_planar_segmentation.py  run_slurm.py  test_fpl.py
user_guide/: assembly.html  batch.html  batch_utilities.html  collation.html  index.html  registration.html  segmentation.html
util/: __init__.py  caiman_interface.py  caiman_stats.py  enhancement.py  experiment.py  galvo_corrections.py  get_mroi_from_tiff.py  h5.py  io.py  mask_classification.py  meso.py  metadata.py  performance.py  preprocess.py  registration.py  reorg.py  reshaping_restitching_aligning_fo.py  reshaping_stitching_aligning.py  roi_data_simple.py  santi_reshape.py  scan.py  settings.py  stitching.py  tiff_to_mp4.py
(+497 files in other folders)
