[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lbm_caiman_python"
version = "0.1.0"
description = "Light Beads Microscopy Pipeline using CaImAn"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12.7, <3.12.10"
keywords = ["Pipeline", "Numpy", "Microscopy", "ScanImage", "CaImAn", "tiff", "calcium imaging"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3 :: Only",
]
dependencies = [
	"numpy<2.0",
	"scipy>=1.10",
	"scikit-learn",
	"scikit-image",
	"joblib",
	"tqdm",
	"matplotlib",
	"tifffile",
	"h5py",
	"zarr",
	"dask",
	"pandas",
]
# caiman is installed via pixi (conda-forge) - see pixi.toml
# note: mbo_utilities requires numpy>=2.2 which conflicts with caiman's numpy<2.0

[project.urls]
Homepage = "https://github.com/MillerBrainObservatory/LBM-CaImAn-Python"
Documentation = "https://millerbrainobservatory.github.io/LBM-CaImAn-Python"
Repository = "https://github.com/MillerBrainObservatory/LBM-CaImAn-Python"
Issues = "https://github.com/MillerBrainObservatory/LBM-CaImAn-Python/issues"

[project.scripts]
lcp = "lbm_caiman_python.__main__:main"

[dependency-groups]
dev = [
	"pytest>=8.0.0",
]
docs = [
	"docutils>=0.21.2",
	"myst-nb>=1.2.0",
	"sphinx>=8.1.3",
	"sphinx-autodoc2>=0.5.0",
	"sphinx-copybutton>=0.5.2",
	"sphinx_togglebutton",
	"sphinx-design>=0.6.1",
	"sphinxcontrib-bibtex",
	"sphinx-tippy",
	"sphinx_book_theme",
	"numpydoc",
	"ipykernel",
	"sphinxcontrib-images",
	"sphinxcontrib-video",
	"jupytext",
]

[tool.ruff]
line-length = 88
src = ["lbm_caiman_python"]
exclude = ["docs", "exclude", "demos", "scripts", "dev"]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = ["ALL"]
ignore = [
	"D401",   # First line should be in imperative mood
	"COM812", # Missing trailing comma (conflicts with ruff format)
	"ISC001", # Import sorting (conflicts with ruff format)
	"FIX002", # Fixable issue
	"DOC201", # no doc for return type
	"FBT",    # require bool options to be keyword-only
	"ANN",    # missing type annotations
	"EM101",  # exception must not use string literal
	"EM102",  # exception must not use f-string literal
	"TRY003", # long exception messages
	"C901",   # too complex
	"PLR0912", # too many branches
	"PLR0913", # too many arguments
	"PLR0915", # too many statements
]

[tool.ruff.lint.per-file-ignores]
"docs/*.py" = ["D"]

[tool.setuptools.exclude-package-data]
"*" = ["data/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lbm_caiman_python*"]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"if TYPE_CHECKING:",
	"@overload",
	"except ImportError",
	"\\.\\.\\.",
	"raise NotImplementedError()"
]
